crates/ink/tests/ui/trait_def/fail/definition_empty.rs
use ink_lang as ink;

#[ink::trait_definition]
pub trait TraitDefinition {}

fn main() {}
